2003-05-17  Larry Ewing  <lewing@ximian.com>

	* menubar.c (file_dialog_ok): rewrite file insertion to try utf-8
	then locale charset and improve error reporting.  Fixes #43069.

2003-05-08  Radek Doulik  <rodo@ximian.com>

	* include config.h and gnome-i18n.h everywhere so that we use
	explicit translation domain

	* editor-control-shlib.c (editor_shlib_init): new helper method,
	initializes i18n

	* gnome-gtkhtml-editor.c (main): call bind_textdomain_codeset with
	utf-8

2003-05-02  Radek Doulik  <rodo@ximian.com>

	* properties.c (gtk_html_edit_properties_dialog_new): remove apply
	button to be more conformant with the HIG

2003-05-01  Abel Cheung  <maddog@linux.org.hk>

	* image.c(get_sample_html): Fix typo.
	* GNOME_GtkHTML_Editor.server.in.in.h,
	  gtkhtml-editor-properties.glade.h,
	  GNOME_GtkHTML_Editor.xml.in.h:
	  Remove temp files generated by intltool.

2003-04-29  Larry Ewing  <lewing@ximian.com>

	* Makefile.am (CLEANFILES): add missing files to CLEANFILES to
	make automake-1.7.3 happy.

	* menubar.c: remove unused include.

2003-04-17  Radek Doulik  <rodo@ximian.com>

	* html-stream-mem.c: derive from BonoboObject instead of
	BonoboStreamMem

2003-04-14  Larry Ewing  <lewing@ximian.com>

	* Makefile.am (SPELL_IDL_GENERATED_C): remove spell.h that was
	accidentally still there.

2003-04-14  Radek Doulik  <rodo@ximian.com>

	* test-html-editor-control.c (app_delete_cb): call quit
	(container_create): don't connect to window destroy signal, it's
	no more needed + was calling unref on uic which we didn't have
	reference to
	(container_create): remove control frame activate call - I guess
	it was committed by mistake, right Larry? after I removed this
	call things started to work again - menu items work and no warning
	on exit

2003-04-09  Larry Ewing  <lewing@ximian.com>

	* editor-control-factory.c (editor_init_painters): use the gdk painter
	directly rather than the prop 
	(editor_set_format): copy the default fonts back since they may